# job_scraper

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
job_scraper/: items.py  pipelines.py  settings.py
job_scraper/spiders/: aijobs.py  base_spider.py  base_xml_feed_spider.py  indeed.py  reed.py  technojobs.py  theguardian.py
